# Primer

./: CMakeLists.txt
src/: CMakeLists.txt  Primer.cpp  main.cpp
src/include/: Primer.hpp
tests/: CMakeLists.txt  test_primer.cpp
